Prevent logo from overlapping navbar

--- a/www/ifdb.css
+++ b/www/ifdb.css
@@ -1367,7 +1367,7 @@ span.headlineRss {
         top: calc(55px + 2.5em);
         right: 0;
         background-color: #e8e8e8;
-        z-index: 1;
+        z-index: 2;
     }
 
     .mobile-menu ul a{
@@ -1551,6 +1551,7 @@ div.scroll-links {
     width: revert;
     justify-content: center;
     padding: 0.5em 0;
+    z-index: 1;
 }
 
 .scroll-links ul {
